# object_database

./: CMakeLists.txt  README.md
include/: object_database.h  object_dict.h  shared_types.h  type_introspection.h
src/: cli.cpp  object_database.cpp  shared_types.cpp  type_introspection.cpp
